{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 612,
  "lineage": "cc8327ec-ecf1-c767-1801-7e89191c1737",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b36be7e440fa70d",
            "domain": "vpc",
            "id": "eipalloc-06b36be7e440fa70d",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-79-64-182.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.64.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4a04224b3af12a3",
            "domain": "vpc",
            "id": "eipalloc-0c4a04224b3af12a3",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-35-212-236.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.212.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:internet-gateway/igw-0dc3c2e703670b811",
            "id": "igw-0dc3c2e703670b811",
            "owner_id": "421576594835",
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b36be7e440fa70d",
            "connectivity_type": "public",
            "id": "nat-0bfa0eb47b959d23d",
            "network_interface_id": "eni-0365d95e6c2cf2712",
            "private_ip": "10.0.1.197",
            "public_ip": "52.79.64.182",
            "subnet_id": "subnet-034454d53d9e7f646"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4a04224b3af12a3",
            "connectivity_type": "public",
            "id": "nat-07012c30519f50a33",
            "network_interface_id": "eni-0598631f85180202d",
            "private_ip": "10.0.2.73",
            "public_ip": "3.35.212.236",
            "subnet_id": "subnet-0791d2e6a53fd37d6"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:route-table/rtb-02dde52f80140c1ad",
            "id": "rtb-02dde52f80140c1ad",
            "owner_id": "421576594835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bfa0eb47b959d23d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:route-table/rtb-0d4547391f4feae85",
            "id": "rtb-0d4547391f4feae85",
            "owner_id": "421576594835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07012c30519f50a33",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:route-table/rtb-04a0e8007c9bca35d",
            "id": "rtb-04a0e8007c9bca35d",
            "owner_id": "421576594835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc3c2e703670b811",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a3ede2738d7592d",
            "route_table_id": "rtb-02dde52f80140c1ad",
            "subnet_id": "subnet-0f75d6815f1fe3c00"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f8cb1632f673a84",
            "route_table_id": "rtb-0d4547391f4feae85",
            "subnet_id": "subnet-02644f36edc3044c8"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d33a82a00283631c",
            "route_table_id": "rtb-04a0e8007c9bca35d",
            "subnet_id": "subnet-034454d53d9e7f646"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0343a76af70cc926e",
            "route_table_id": "rtb-04a0e8007c9bca35d",
            "subnet_id": "subnet-0791d2e6a53fd37d6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-0f75d6815f1fe3c00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f75d6815f1fe3c00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_1",
              "kubernetes.io/cluster/eks-ctl": "shared"
            },
            "tags_all": {
              "Name": "Private_Subnet_1",
              "kubernetes.io/cluster/eks-ctl": "shared"
            },
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-02644f36edc3044c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02644f36edc3044c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_Subnet_2",
              "kubernetes.io/cluster/eks-ctl": "shared"
            },
            "tags_all": {
              "Name": "Private_Subnet_2",
              "kubernetes.io/cluster/eks-ctl": "shared"
            },
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-034454d53d9e7f646",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034454d53d9e7f646",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:subnet/subnet-0791d2e6a53fd37d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0791d2e6a53fd37d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421576594835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:vpc/vpc-02103dbf9d76a31cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e548eb4eadc54957",
            "default_route_table_id": "rtb-0d1e84c7ebf6943dc",
            "default_security_group_id": "sg-00b7ff6d3a363264b",
            "dhcp_options_id": "dopt-0c3264ce764ccd073",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02103dbf9d76a31cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1e84c7ebf6943dc",
            "owner_id": "421576594835",
            "tags": {
              "Name": "vpc-vpc"
            },
            "tags_all": {
              "Name": "vpc-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:421576594835:security-group/sg-0d0a7d5238f4c4982",
            "description": "Allow TLS inbound traffic with vpn",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0a7d5238f4c4982",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "vpn",
            "name_prefix": "",
            "owner_id": "421576594835",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02103dbf9d76a31cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_route_table_association.PrivateRTassociation",
            "module.vpc.aws_route_table_association.PublicRTassociation",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc",
            "module.vpc.data.aws_availability_zones.aws_azs"
          ]
        }
      ]
    }
  ]
}